--- a/src/styles/nav.style.css
+++ b/src/styles/nav.style.css
@@ -1,11 +1,15 @@
 .navBar{
     display: flex; flex-direction: row;
     justify-content: flex-end;
-    border: 1px solid pink;
-    background-color: gray;
+    border: 0px solid pink;
+    background-color: #303030;
 }
 .nav-item{
-    border: 1px solid green;
-    width: 80px;
-    margin: 1vw 2vw
+    text-decoration: none;
+    color: aliceblue;
+    padding: 0.5vw 1vw;
+    background-color: #979797;
+    border: 0px solid green;
+    border-radius: 15px;
+    margin: 1vw 2vw;
 }
